--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -110,19 +110,23 @@ form {
 }
 
 
-
+.login{
+  background-image: url("../src/images/colorful.jpg");
+  width: 100%;
+}
 .login-form {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-items: center;
-  margin-left: 650px;
+  margin-left: 100px;
   margin-top: 100px;
+  
   
   input {
     font-family: "Montserrat", sans-serif;
-    margin: 5px;
-    width: 150%;
+    margin: 10px;
+    width: 30%;
     font-size: 18px;
   }
 
@@ -132,7 +136,7 @@ form {
     color: white;
     padding: 3px 8px;
     margin-top: 16px;
-    width: 50%;
+    width: 10%;
     font-size: 18px;
   }
   
